--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,22 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= params[:controller] %>">
+  <div class="container">
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <%= link_to "Home", root_path, :class => 'navbar-brand'  %>
+      </div>
 
-<%= yield %>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class='categories'><%= link_to "Categories", categories_path %></li>
+          <li><%= link_to "New Classified", new_classified_path %></li>
+        </ul>
+      </div>
+    </nav>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
